syntax = "proto3";

option go_package = "newsfeed/proto/gen";

// grpc API
service UserService {
  // Create User
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

// CreateUserRequest
message CreateUserRequest {
    string username = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    int32 dob = 5;
    string email = 6;
}

// CreateUserResponse
message CreateUserResponse {
  string err_code = 1;
  string message  = 2;
  User user = 3;
}

message User {
  int64 id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  int32 dob = 5;
  string email = 6;
}